// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@formatjs/unplugin — esbuild > ast option pre-parses defaultMessage 1`] = `
"// ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/defineMessage.js
function defineMessage(msg2) {
  return msg2;
}
var msg = defineMessage({
  id: "yVWDDe",
  defaultMessage: [{ "type": 0, "value": "You have " }, { "type": 6, "value": "count", "options": { "one": { "value": [{ "type": 7 }, { "type": 0, "value": " item" }] }, "other": { "value": [{ "type": 7 }, { "type": 0, "value": " items" }] } }, "offset": 0, "pluralType": "cardinal" }]
});
export {
  msg
};
"
`;

exports[`@formatjs/unplugin — esbuild > generates ids and removes descriptions 1`] = `
"// ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/formatMessage.js
var intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage;
  }
};
var greeting = intl.formatMessage({
  id: "YyDw8T",
  defaultMessage: "Hello World"
});
var farewell = intl.formatMessage({
  id: "73dImr",
  defaultMessage: "Goodbye World"
});
export {
  farewell,
  greeting
};
"
`;

exports[`@formatjs/unplugin — esbuild > removeDefaultMessage option 1`] = `
"// ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/formatMessage.js
var intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage;
  }
};
var greeting = intl.formatMessage({
  id: "YyDw8T"
});
var farewell = intl.formatMessage({
  id: "73dImr"
});
export {
  farewell,
  greeting
};
"
`;

exports[`@formatjs/unplugin — rollup > ast option pre-parses defaultMessage 1`] = `
"function defineMessage(msg) {
  return msg
}

const msg = defineMessage({id: "yVWDDe", 
  defaultMessage: [{"type":0,"value":"You have "},{"type":6,"value":"count","options":{"one":{"value":[{"type":7},{"type":0,"value":" item"}]},"other":{"value":[{"type":7},{"type":0,"value":" items"}]}},"offset":0,"pluralType":"cardinal"}],
});

export { msg };
"
`;

exports[`@formatjs/unplugin — rollup > generates ids and removes descriptions 1`] = `
"const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
};

const greeting = intl.formatMessage({id: "YyDw8T", 
  defaultMessage: 'Hello World',
});

const farewell = intl.formatMessage({id: "73dImr", 
  defaultMessage: 'Goodbye World',
});

export { farewell, greeting };
"
`;

exports[`@formatjs/unplugin — rollup > removeDefaultMessage option 1`] = `
"const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
};

const greeting = intl.formatMessage({id: "YyDw8T", 
});

const farewell = intl.formatMessage({id: "73dImr", 
});

export { farewell, greeting };
"
`;

exports[`@formatjs/unplugin — rspack > ast option pre-parses defaultMessage 1`] = `
"// The require scope
var __webpack_require__ = {};

// webpack/runtime/define_property_getters
(() => {
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
        if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
            Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
        }
    }
};
})();
// webpack/runtime/has_own_property
(() => {
__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
})();
var __webpack_exports__ = {};
__webpack_require__.d(__webpack_exports__, {
  a: () => (msg)
});
function defineMessage(msg) {
  return msg
}

const msg = defineMessage({id: "yVWDDe", 
  defaultMessage: [{"type":0,"value":"You have "},{"type":6,"value":"count","options":{"one":{"value":[{"type":7},{"type":0,"value":" item"}]},"other":{"value":[{"type":7},{"type":0,"value":" items"}]}},"offset":0,"pluralType":"cardinal"}],
})

var __webpack_exports__msg = __webpack_exports__.a;
export { __webpack_exports__msg as msg };
"
`;

exports[`@formatjs/unplugin — rspack > generates ids and removes descriptions 1`] = `
"// The require scope
var __webpack_require__ = {};

// webpack/runtime/define_property_getters
(() => {
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
        if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
            Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
        }
    }
};
})();
// webpack/runtime/has_own_property
(() => {
__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
})();
var __webpack_exports__ = {};
__webpack_require__.d(__webpack_exports__, {
  B: () => (farewell),
  O: () => (greeting)
});
const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
}

const greeting = intl.formatMessage({id: "YyDw8T", 
  defaultMessage: 'Hello World',
})

const farewell = intl.formatMessage({id: "73dImr", 
  defaultMessage: 'Goodbye World',
})

var __webpack_exports__farewell = __webpack_exports__.B;
var __webpack_exports__greeting = __webpack_exports__.O;
export { __webpack_exports__farewell as farewell, __webpack_exports__greeting as greeting };
"
`;

exports[`@formatjs/unplugin — rspack > removeDefaultMessage option 1`] = `
"// The require scope
var __webpack_require__ = {};

// webpack/runtime/define_property_getters
(() => {
__webpack_require__.d = (exports, definition) => {
	for(var key in definition) {
        if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
            Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
        }
    }
};
})();
// webpack/runtime/has_own_property
(() => {
__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
})();
var __webpack_exports__ = {};
__webpack_require__.d(__webpack_exports__, {
  B: () => (farewell),
  O: () => (greeting)
});
const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
}

const greeting = intl.formatMessage({id: "YyDw8T", 
})

const farewell = intl.formatMessage({id: "73dImr", 
})

var __webpack_exports__farewell = __webpack_exports__.B;
var __webpack_exports__greeting = __webpack_exports__.O;
export { __webpack_exports__farewell as farewell, __webpack_exports__greeting as greeting };
"
`;

exports[`@formatjs/unplugin — vite > ast option pre-parses defaultMessage 1`] = `
"//#region ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/defineMessage.js
function defineMessage(msg) {
	return msg;
}
var msg = defineMessage({
	id: "yVWDDe",
	defaultMessage: [{
		"type": 0,
		"value": "You have "
	}, {
		"type": 6,
		"value": "count",
		"options": {
			"one": { "value": [{ "type": 7 }, {
				"type": 0,
				"value": " item"
			}] },
			"other": { "value": [{ "type": 7 }, {
				"type": 0,
				"value": " items"
			}] }
		},
		"offset": 0,
		"pluralType": "cardinal"
	}]
});
//#endregion
export { msg };
"
`;

exports[`@formatjs/unplugin — vite > generates ids and removes descriptions 1`] = `
"//#region ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/formatMessage.js
var intl = { formatMessage(descriptor) {
	return descriptor.defaultMessage;
} };
var greeting = intl.formatMessage({
	id: "YyDw8T",
	defaultMessage: "Hello World"
});
var farewell = intl.formatMessage({
	id: "73dImr",
	defaultMessage: "Goodbye World"
});
//#endregion
export { farewell, greeting };
"
`;

exports[`@formatjs/unplugin — vite > removeDefaultMessage option 1`] = `
"//#region ../../../../../../../../execroot/_main/bazel-out/darwin_arm64-fastbuild/bin/packages/unplugin/integration-tests/fixtures/formatMessage.js
var intl = { formatMessage(descriptor) {
	return descriptor.defaultMessage;
} };
var greeting = intl.formatMessage({ id: "YyDw8T" });
var farewell = intl.formatMessage({ id: "73dImr" });
//#endregion
export { farewell, greeting };
"
`;

exports[`@formatjs/unplugin — webpack > ast option pre-parses defaultMessage 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   a: () => (/* binding */ msg)
/* harmony export */ });
function defineMessage(msg) {
  return msg
}

const msg = defineMessage({id: "yVWDDe", 
  defaultMessage: [{"type":0,"value":"You have "},{"type":6,"value":"count","options":{"one":{"value":[{"type":7},{"type":0,"value":" item"}]},"other":{"value":[{"type":7},{"type":0,"value":" items"}]}},"offset":0,"pluralType":"cardinal"}],
})

const __webpack_exports__msg = __webpack_exports__.a;
export { __webpack_exports__msg as msg };
"
`;

exports[`@formatjs/unplugin — webpack > generates ids and removes descriptions 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   B: () => (/* binding */ farewell),
/* harmony export */   O: () => (/* binding */ greeting)
/* harmony export */ });
const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
}

const greeting = intl.formatMessage({id: "YyDw8T", 
  defaultMessage: 'Hello World',
})

const farewell = intl.formatMessage({id: "73dImr", 
  defaultMessage: 'Goodbye World',
})

const __webpack_exports__farewell = __webpack_exports__.B;
const __webpack_exports__greeting = __webpack_exports__.O;
export { __webpack_exports__farewell as farewell, __webpack_exports__greeting as greeting };
"
`;

exports[`@formatjs/unplugin — webpack > removeDefaultMessage option 1`] = `
"/******/ // The require scope
/******/ var __webpack_require__ = {};
/******/ 
/************************************************************************/
/******/ /* webpack/runtime/define property getters */
/******/ (() => {
/******/ 	// define getter functions for harmony exports
/******/ 	__webpack_require__.d = (exports, definition) => {
/******/ 		for(var key in definition) {
/******/ 			if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 				Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 			}
/******/ 		}
/******/ 	};
/******/ })();
/******/ 
/******/ /* webpack/runtime/hasOwnProperty shorthand */
/******/ (() => {
/******/ 	__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ })();
/******/ 
/************************************************************************/
var __webpack_exports__ = {};
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   B: () => (/* binding */ farewell),
/* harmony export */   O: () => (/* binding */ greeting)
/* harmony export */ });
const intl = {
  formatMessage(descriptor) {
    return descriptor.defaultMessage
  },
}

const greeting = intl.formatMessage({id: "YyDw8T", 
})

const farewell = intl.formatMessage({id: "73dImr", 
})

const __webpack_exports__farewell = __webpack_exports__.B;
const __webpack_exports__greeting = __webpack_exports__.O;
export { __webpack_exports__farewell as farewell, __webpack_exports__greeting as greeting };
"
`;
